# prog-2002-ta

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  flake.nix  justfile  package.nix
assignment/: README.md
examples/example_1/: CMakeLists.txt  README.md  main.cpp
examples/example_2/: CMakeLists.txt  README.md  main.cpp
examples/example_2/shaders/: square.h  triangle.h
examples/example_3/: CMakeLists.txt  README.md  main.cpp
examples/example_3/shaders/: square.h
examples/example_4/: CMakeLists.txt  README.md  main.cpp
examples/example_4/shaders/: square.h
examples/example_5/: CMakeLists.txt  main.cpp
examples/example_5/shaders/: shader.h
framework/: CMakeLists.txt  buffer.cpp  buffer.h  pipeline.cpp  pipeline.h  ranges.h  shader.cpp  shader.h  shapes.h  texture.cpp  texture.h  window.cpp  window.h
labs/lab1/: CMakeLists.txt  main.cpp
labs/lab1/assets/: fragment.glsl  vertex.glsl
labs/lab2/: CMakeLists.txt  main.cpp
labs/lab2/assets/: fragment.glsl
labs/lab3/: CMakeLists.txt  main.cpp
labs/lab3/assets/: fragment.glsl  vertex.glsl
